k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelens-ingress
  namespace: homelens
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Terraform이 생성한 ALB를 재사용 (새 ALB 생성 방지)
    # terraform output -json | jq -r '.alb_arn.value' 로 확인 후 채울 것
    alb.ingress.kubernetes.io/load-balancer-arn: "arn:aws:elasticloadbalancing:eu-west-3:611058323802:loadbalancer/app/homelens-dev-alb/fbcd3a69385a4a17"

    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-3:611058323802:certificate/e6827a7e-81ec-44d0-ae16-8877325b91e8"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    # X-API-KEY 없는 요청 차단은 FastAPI 애플리케이션 레이어에서 처리
spec:
  rules:
    - host: api-dev.ourhomelens.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 80
